@@ -1,3 +1,10 @@
+2004-09-13  Donal K. Fellows  <donal.k.fellows@man.ac.uk>
+
+	* generic/tclNamesp.c (NsEnsembleImplementationCmd): Add token
+	field to internal rep of EnsembleCmdRep structure so that we can
+	check it to see if the subcommand object is really being used with
+	the same ensemble. [Bug 1026903]
+
 2004-09-11  Kevin B. Kenny  <kennykb@acm.org>
 
 	* generic/tclClock.c (TclMktimeObjCmd): Corrected a bad check
